# basic-cmake-conan

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  conanfile.py
include/brokenmath/: brokenmath.h
src/: brokenmath.cpp  main.cpp
tests/: test_brokenmath.cpp
